updated trivia-options form

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -13,6 +13,12 @@
   <header class="main-header">
     <div class="container">
       <section class="logo">
+                  <div class="spinner" ng-hide="$ctrl.scores">
+            <span class="inner"></span>
+            <span class="inner"></span>
+            <span class="inner"></span>
+            <span class="inner"></span>
+          </div> 
         <img src="./assets/img/logo.png" alt="trivia game logo">
         <h1 class="tag-line">the GAME!</h1>
         <h3 class="tag-line2">Made by Ryan Johnson</h3>
@@ -110,6 +116,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" charset="utf-8"></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.0-rc.1/angular-ui-router.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular-animate.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-moment/1.0.1/angular-moment.min.js'></script>
   <script src="js/app/app.module.js" charset="utf-8"></script>
