--- a/app/public/js/trivia/trivia-options-form.template.html
+++ b/app/public/js/trivia/trivia-options-form.template.html
@@ -1,55 +1,36 @@
-<form id="filter-options">
+<form name="trivia-options" id="filter-options" ng-submit="$ctrl.getQuestions()">
   <!-- Number of Questions -->
-  <label for="num-questions">Number of Questions:</label>
-  <select class="num-questions" name="num-questions">
-                     <option value="1">1</option>
-                     <option value="3">3</option>
-                     <option value="5">5</option>
-                     <option value="10" selected>10</option>
-                  </select>
+  <div class="form-group">
+    <label for="num-questions">Number of Questions:</label>
+    <select name="num-questions" id="num-questions" class="num-questions form-control" 
+            ng-options="number.name for number in $ctrl.numbers track by number.id"
+            ng-model="$ctrl.selectedNumber">
+    </select>
+  </div>
   <!-- Filter Category -->
-  <label for="category-filter">Choose Category:</label>
-  <select class="category-filter" name="categories">
-                     <option value="any">Any Category</option>
-                     <option value="9">General Knowledge</option>
-                     <option value="10">Entertainment: Books</option>
-                     <option value="11">Entertainment: Film</option>
-                     <option value="12">Entertainment: Music</option>
-                     <option value="13">Entertainment: Musicals &amp; Theatres</option>
-                     <option value="14">Entertainment: Television</option>
-                     <option value="15">Entertainment: Video Games</option>
-                     <option value="16">Entertainment: Board Games</option>
-                     <option value="17">Science &amp; Nature</option>
-                     <option value="18">Science: Computers</option>
-                     <option value="19">Science: Mathematics</option>
-                     <option value="20">Mythology</option>
-                     <option value="21">Sports</option>
-                     <option value="22">Geography</option>
-                     <option value="23">History</option>
-                     <option value="24">Politics</option>
-                     <option value="25">Art</option>
-                     <option value="26">Celebrities</option>
-                     <option value="27">Animals</option>
-                     <option value="28">Vehicles</option>
-                     <option value="29">Entertainment: Comics</option>
-                     <option value="30">Science: Gadgets</option>
-                     <option value="31">Entertainment: Japanese Anime &amp; Manga</option>
-                     <option value="32">Entertainment: Cartoon &amp; Animations</option>
-                  </select>
+  <div class="form-group">
+    <label for="category-filter">Choose Category:</label>
+    <select name="categories" id="category-filter" class="category-filter form-control" 
+            ng-options="category.name for category in $ctrl.categories track by category.id"
+            ng-model="$ctrl.selectedCategory">
+    </select>
+  </div>
   <!-- Filter Difficulty -->
-  <label for="difficulty">Choose Difficulty:</label>
-  <select class="difficulty-filter" name="difficulty">
-                     <option value="any">Any Difficulty</option>
-                     <option value="easy">Easy</option>
-                     <option value="medium">Medium</option>
-                     <option value="hard">Hard</option>
-                  </select>
+  <div class="form-group">
+    <label for="difficulty">Choose Difficulty:</label>
+    <select name="difficulty" id="difficulty" class="difficulty-filter form-control"
+            ng-options="difficulty.name for difficulty in $ctrl.difficulties track by difficulty.id"
+            ng-model="$ctrl.selectedDifficulty">
+    </select>
+  </div>
   <!-- Filter Question Type -->
-  <label for="type-filter">Choose Type:</label>
-  <select class="type-filter" name="type">
-                     <option value="any">Any Type</option>
-                     <option value="multiple">Multiple Choice</option>
-                     <option value="boolean">True/False</option>
-                  </select>
-  <button id="get-questions" class="btn btn-success btn-block" type="button" name="new-game">START GAME</button>
+  <div class="form-group">
+    <label for="type-filter">Choose Type:</label>
+    <select name="type-filter" id="type-filter" class="type-filter form-control"
+            ng-options="type.name for type in $ctrl.types track by type.id"
+            ng-model="$ctrl.selectedType">
+    </select>
+  </div>
+  
+  <button id="get-questions" class="btn btn-success btn-block form-control" type="button" name="new-game">START GAME</button>
 </form>
