created chat component

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <title>Trivia: the GAME!</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css'/>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -99,7 +100,7 @@
       <!-- High Scores -->
       <aside class="side-bar col-xs-6 col-sm-3 col-md-3 col-lg-3">
 
-        <leaderboard-list></leaderboard-list>
+        <side-bar></side-bar>
 
       </aside>
     </div>
@@ -122,7 +123,9 @@
   <script src="js/app/app.module.js" charset="utf-8"></script>
   <script src="js/app/app.config.js" charset="utf-8"></script>
   <script src="js/leaderboards/leaderboard-list.component.js" charset="utf-8"></script>
+  <script src="js/chat/chat.component.js" charset="utf-8"></script>
   <script src="js/trivia/trivia-options-form.component.js" charset="utf-8"></script>
+  <script src="js/sidebar/sidebar.component.js" charset="utf-8"></script>
   <script src="js/services/leaderboard.service.js" charset="utf-8"></script>
   <script src="js/main.js" charset="utf-8"></script>
 </body>
