--- a/app/public/js/leaderboards/leaderboard-list.template.html
+++ b/app/public/js/leaderboards/leaderboard-list.template.html
@@ -1,5 +1,4 @@
-<section class="high-scores">
-  <h2>High Scores</h2>
+<!--<section class="high-scores">-->
   <table class="scores table">
     <thead>
       <tr>
@@ -14,4 +13,4 @@
       </tr>
     </tbody>
   </table>
-</section>
+<!--</section>-->
