added socket factory and verified connection

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -120,6 +120,8 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular-animate.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-moment/1.0.1/angular-moment.min.js'></script>
+  <script src="angular-socket-io/socket.js" charset="utf-8"></script>
+  <script src="socket.io-client/socket.io.js" charset="utf-8"></script>
   <script src="js/app/app.module.js" charset="utf-8"></script>
   <script src="js/app/app.config.js" charset="utf-8"></script>
   <script src="js/leaderboards/leaderboard-list.component.js" charset="utf-8"></script>
@@ -127,6 +129,7 @@
   <script src="js/trivia/trivia-options-form.component.js" charset="utf-8"></script>
   <script src="js/sidebar/sidebar.component.js" charset="utf-8"></script>
   <script src="js/services/leaderboard.service.js" charset="utf-8"></script>
+  <script src="js/services/socket.factory.js" charset="utf-8"></script>
   <script src="js/main.js" charset="utf-8"></script>
 </body>
 
